--- a/DragonTacticsSheet.html
+++ b/DragonTacticsSheet.html
@@ -626,6 +626,24 @@
                         <option value="config">Config</option>
                     </select>
                 </div>
+                <div class="powerbody">
+                    <span name="attr_standard-range" value="Melee">Melee</span> ♦ <span name="attr_standard-targets" value="One Creature">One Creature</span><br>
+                    <button type="roll" class="combatroll" name="roll_standard-attack"
+                        value="&{template:attack} {{name=@{standard-name}}} {{RangeTargets=@{standard-rangetargets}}} {{attack=[[1d20 @{standard-hitbonus}]]}} {{attackadv=[[1d20 @{standard-hitbonus}]]}} {{edge=[[1d4]]}} {{defense=@{standard-defselect}}}">
+                            <span name="attr_standard-hitbonus" value="+0">+0</span> vs. <span name="attr_standard-defselect">AC</span>
+                    </button>
+                    <button type="roll" class="combatroll" name="roll_standard-damage"
+                        value="&{template:damage} {{name=@{standard-name}}} {{damage=[[@{standard-damagedice} @{standard-flatdamage}]]}} {{dmgcrit=[[@{standard-critdice} + @{standard-critflat} @{standard-flatdamage}]]}} {{dmgtype=@{standard-damagetype}}}">
+                        <span name="attr_standard-damagedice" value="1d4">1d4</span>
+                        <span value="0" name="attr_standard-flatdamage" value="+0">+0</span>
+                        <span name="attr_standard-damagetype" value="Fire">Fire</span>
+                        damage
+                    </button>
+                    <button type="roll" class="combatroll" name="roll_standard-textout"
+                        value="&{template:powertext} {{name=@{standard-name}}} {{powertext=@{standard-power-text}}}">
+                        Power Text
+                    </button>
+                </div>
             </div>
             <div class="powerconfig">
                 <div class="powerheader">
@@ -642,6 +660,58 @@
                         <option value="encounter">Encounter</option>
                         <option value="daily">Daily</option>
                     </select>
+                    <select name="attr_standard-accessory" class="accesoryselect">
+                        <option value="imp1"> Implement 1 </option>
+                        <option value="imp2"> Implement 2 </option>
+                        <option value="wep1"> Weapon 1 </option>
+                        <option value="wep2"> Weapon 2 </option>
+                        <option value="wep3"> Weapon 3 </option>
+                    </select>
+                    <input type="text" name="attr_standard-rangetargets" class="rangetargets" placeholder="Range and Targets" />
+                    <select class="attselect" name="attr_standard-ability">
+                        <option value="strmod" selected>Strength</option>
+                        <option value="conmod">Constitution</option>
+                        <option value="dexmod">Dexterity</option>
+                        <option value="intmod">Intelligence</option>
+                        <option value="wismod">Wisdom</option>
+                        <option value="chamod">Charisma</option>
+                    </select>
+                    vs.
+                    <span class="defselect">
+                        <select name="attr_standard-defselect">
+                            <option value="AC">AC</option>
+                            <option value="Fort">Fortitude</option>
+                            <option value="Ref">Reflex</option>
+                            <option value="Will">Will</option>
+                        </select>
+                    </span>
+                    <label title="Damage Dice">
+                        Damage Dice
+                        <input type="text" name="attr_standard-damagedice" class="diceinput" value="1d4" /></label>
+                    <label title="Damage Type">
+                        Damage Type
+                        <input type="text" name="attr_standard-damagetype" class="diceinput" value="Fire" /></label>
+                    <label title="Crit dice">
+                        Crit Dice
+                        <input type="text" value="1d4" class="diceinput" name="attr_standard-critdice" /></label>
+                    <label title="Misc. Bonus to hit">
+                        Misc Bonus to Hit
+                        <input type="number" value="0" name="attr_standard-miscattackbonus" /></label>
+                    <label title="Other damage bonuses, such as from feats">
+                        Misc Flat Damage
+                        <input type="number" name="attr_standard-miscdamage" value="0" />
+                    </label>
+                    <label title="For basic attacks that don't add the ability modifier to the damage roll">
+                        Abi mod to damage
+                        <input type="checkbox" name="attr_standard-abidamage" checked value=1 />
+                    </label>
+    
+                    <textarea name="attr_standard-power-text" placeholder="Effect: Create a zone"></textarea>
+                    <input type="hidden" name="attr_standard-hitbonus" value="+0" />
+                    <input type="hidden" name="attr_standard-hitbonus-accessory" value="0" />
+                    <input type="hidden" name="attr_standard-abimod" value="0" />
+                    <input type="hidden" name="attr_standard-flatdamage"  value="0" />
+                    <input type="hidden" name="attr_standard-critflat" value="0" />
                 </div>
             </div>
         </fieldset>
@@ -1372,7 +1442,7 @@
                 <th>{{ name }}</th>
             </tr>
             <tr>
-                <td class="subheader">{{ RangeTargets }}</td>
+                <td class="subheader">{{ Range }} ♦ {{Targets}}</td>
             </tr>
             <tr class="arrow-container">
                 <td>
